Control linkage with build command

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ include_directories(include)
 # Build targets
 ################################
 
-add_library(mindbw SHARED
+add_library(mindbw
     ${SRC}
     ${INCLUDES})
 
