--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ file(GLOB_RECURSE INCLUDES include/*.h)
 file(GLOB_RECURSE SRC src/*.cpp)
 
 include_directories(include)
+include_directories(${CMAKE_CURRENT_BINARY_DIR}/include)
 
 ################################
 # Build targets
@@ -27,11 +28,24 @@ include_directories(include)
 
 add_library(mindbw
     ${SRC}
-    ${INCLUDES})
+    ${INCLUDES}
+    ${CMAKE_CURRENT_BINARY_DIR}/include/mindbw/cpp/DataTypes.h)
 
 target_link_libraries(mindbw
     ${SQLITE3_LIBRARIES}
     ${ZEPHYR_LIBRARIES})
+
+make_directory(${CMAKE_CURRENT_BINARY_DIR}/include/mindbw/cpp)
+make_directory(${CMAKE_CURRENT_BINARY_DIR}/include/mindbw/c)
+make_directory(${CMAKE_CURRENT_BINARY_DIR}/include/mindbw/java)
+
+add_custom_command(OUTPUT
+    ${CMAKE_CURRENT_BINARY_DIR}/include/mindbw/cpp/DataTypes.h
+    COMMAND python
+    ARGS $ENV{PROJECT_SCRIPT_DIR}/include/generate-data.py
+    ${CMAKE_CURRENT_LIST_DIR}/xml/data.xml
+    ${CMAKE_CURRENT_BINARY_DIR}/include/mindbw)
+
 
 ################################
 # Export library
@@ -39,7 +53,7 @@ target_link_libraries(mindbw
 
 export_project(
     NAME mindbw
-    INCLUDES ${CMAKE_CURRENT_LIST_DIR}/include
+    INCLUDES ${CMAKE_CURRENT_LIST_DIR}/include ${CMAKE_CURRENT_BINARY_DIR}/include
     LIBS mindbw
     VERSION ${DB_VERSION}
 )
