Use sinc for code generation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ set(DB_VERSION "0.0.1")
 find_package(SQLite3 REQUIRED)
 
 find_package(kizhi)
+find_package(sinc)
 find_package(zephyr)
 
 include_directories(${KIZHI_INCLUDE_DIRS})
@@ -41,7 +42,7 @@ target_link_libraries(mindbw
 add_custom_command(OUTPUT
     ${CMAKE_CURRENT_BINARY_DIR}/include/mindbw/cpp/DataTypes.h
     COMMAND python
-    ARGS $ENV{PROJECT_SCRIPT_DIR}/include/generate-data.py
+    ARGS ${SINC_PYTHON_INCLUDE_DIRS}/sinc.py
     ${CMAKE_CURRENT_LIST_DIR}/xml/data.xml
     ${CMAKE_CURRENT_BINARY_DIR}/include/mindbw)
 
